# Github-Copilot-Atlas

./: README.md
.github/agents/: Argus-subagent.agent.md  Atlas.agent.md  Code-Review-subagent.agent.md  Explorer-subagent.agent.md  Frontend-Engineer-subagent.agent.md  Hephaestus-subagent.agent.md  Oracle-subagent.agent.md  Prometheus.agent.md  Sci-Conductor.agent.md  Sci-Debug-Auto.agent.md  Sci-Debug.agent.md  Sci-Docs.agent.md  Sci-Explore.agent.md  Sci-Implement.agent.md  Sci-Notebook.agent.md  Sci-Plan.agent.md  Sci-Research.agent.md  Sci-Review.agent.md  Sci-Viz.agent.md  Themis-subagent.agent.md  (+1 more)
base-agents/: Argus-subagent.agent.md  Atlas.agent.md  Code-Review-subagent.agent.md  Explorer-subagent.agent.md  Frontend-Engineer-subagent.agent.md  Hephaestus-subagent.agent.md  Oracle-subagent.agent.md  Prometheus.agent.md  Sisyphus-subagent.agent.md  Themis-subagent.agent.md
sci-agents/: EXAMPLES.md  README.md  Sci-Conductor.agent.md  Sci-Debug-Auto.agent.md  Sci-Debug.agent.md  Sci-Docs.agent.md  Sci-Explore.agent.md  Sci-Implement.agent.md  Sci-Init.prompt.md  Sci-Notebook.agent.md  Sci-Plan.agent.md  Sci-Research.agent.md  Sci-Review.agent.md  Sci-SavePrompt.prompt.md  Sci-Viz.agent.md
tmp/sci-docs-sandbox/: pyproject.toml
tmp/sci-docs-sandbox/docs/: api.rst  conf.py  guide.rst  index.rst
tmp/sci-docs-sandbox/src/dummy_gp/: __init__.py  kernels.py
web-agents/: EXAMPLES.md  README.md  Web-Conductor.agent.md  Web-Content.agent.md  Web-Explore.agent.md  Web-Implement.agent.md  Web-Plan.agent.md  Web-Research.agent.md  Web-Review.agent.md  Web-Style.agent.md
