[project]
name = "dummy-gp"
version = "0.1.0"
description = "Temporary sandbox package for testing Sci-Docs and related agent flows"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
docs = [
    "sphinx>=8.0",
]
